feat(editor): animate path on canvas when running Run